# python_template

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .env.example  .gitignore  .pair-programming-rules.md  .windsurfrules  AGENTS.md  README.md  config.py  diagrams.md  docker-compose.yml  init-schema.sh  main.py  pyproject.toml  requirements.txt  settings.test.toml  settings.toml
.trunk/: trunk.yaml
.windsurf/rules/: agent-rules.md
app/core/: database.py  factory.py  middleware.py
app/core/actor/: __init__.py
app/core/interface_adapters/: __init__.py
app/core/usecases/: analyze_issue.py
app/core/workflow/: __init__.py
app/domain/: aggregate_root.py  issue.py  issue_event.json  user.py
app/features/issues/: __init__.py  analyze_issue.py  analyze_issue_async.py  repository.py  router.py
app/features/users/: __init__.py
app/interface_adapters/: __init__.py  containers.py  exceptions.py
app/interface_adapters/endpoints/: issues.py
app/interface_adapters/inbox/: readme.md
app/interface_adapters/middleware/: error_handler.py
app/interface_adapters/sdk_client/: readme.md
app/tests/: conftest.py  test_config.py  test_issues.py  test_main.py  test_sqlmodel_repository.py
app/tests/domain/: test_issue.py
bruno_api/: Analyze Issue.bru  Health.bru  Liveness.bru  Readiness.bru  Smoke.bru  Startup.bru  bruno.json  root.bru
migrations/: atlas.sum  migrate.sql
rapidapi/: __init__.py  api_tests.paw
src/app/: repository.py
src/app/actor/: readme.md
src/app/usecases/: analyze_issue.py
src/app_core/: app_core.py  config.py  repository.py
src/app_core/usecases/: analyze_issue.py
src/domain/: aggregate_root.py  issue.py  user.py
src/interface_adapters/: __init__.py
tests/: conftest.py  test_config.py  test_issues.py  test_main.py  test_sqlmodel_repository.py
tests/domain/: test_issue.py
(+33 files in other folders)
