[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [{ name = "Chris Markus", email = "chris@christophermarkus.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
   "fastapi[standard]>=0.115.6",
   "httpx>=0.28.1",
   "loguru>=0.7.3",
   "pydantic>=2.10.5",
   "pydantic-settings>=2.7.1",
   "pytest>=8.3.4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
